use chi to render response, some refactoring
