# docs/swagger.yaml
@@ -1,5 +1,17 @@
 basePath: /api/v1
 definitions:
+  api.ErrorResponse:
+    properties:
+      error:
+        type: string
+      status:
+        type: string
+    type: object
+  api.SuccessResponse:
+    properties:
+      message:
+        type: string
+    type: object
   scraper.Job:
     properties:
       company:
@@ -51,11 +63,17 @@ paths:
             items:
               $ref: '#/definitions/scraper.Job'
             type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
       summary: Get jobs
       tags:
       - jobScraper
   /scrape:
     post:
+      consumes:
+      - application/json
       description: Start scraping jobs based on the provided configuration
       parameters:
       - description: Job Title
@@ -85,13 +103,17 @@ paths:
       - application/json
       responses:
         "202":
-          description: Scraping started
+          description: Accepted
           schema:
-            type: string
+            $ref: '#/definitions/api.SuccessResponse'
         "400":
           description: Bad Request
           schema:
-            type: string
+            $ref: '#/definitions/api.ErrorResponse'
+        "501":
+          description: Not Implemented
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
       summary: Start scraping
       tags:
       - jobScraper
